# Karts-Battle

./: LICENSE  README.md
artwork/blend/: earth-1.blend  earth-1.blend1  earth-2.blend  earth-2.blend1
artwork/blend/splash/: engine-1.blend  engine-1.blend1  engine-2.blend  engine-3.blend  engine-3.blend1  engine-construction-1.blend  engine-construction-1.blend1  fire-tube-1.blend  fire-tube-1.blend1  fire-tube-2.blend  near-1.blend  near-1.blend1  near-logo-1.blend  near-logo-1.blend1  spinning-qm-1.blend  spinning-qm-1.blend1  splash-1.blend  splash-1.blend1  splash-2.blend  splash-2.blend1
artwork/bots/: borsh-bottle-1.blend  bot-1.blend  bot-2.blend  bot-2.glb  bot-3.blend  bot-3.glb  bot-3.gltf  curve-tracking-1.blend  explosions-1.blend  fire-1.blend  fire-2.blend  frame-1.blend  garage-1.blend  kart-config.js  soft-body-1.blend
artwork/bots/textures/: TrackTexture1
artwork/images/game/: borsh-bottle-1-bg-1-sqr-1.xcf  logo-square-1.blend  logo-square-1.blend1  near-blockchain-transmission-1.xcf  near-blockchain-transmission-2.xcf  near-blockchain-transmission-3.xcf  near-blockchain-transmission-boards-1.xcf  near-hold-on-1.xcf  near-propulsion-1-bg-1.xcf  near-speedometer-1.xcf  near-track-1.blend  near-track-1.blend1  (+3 more)
contracts/near/nft/: Cargo.toml
contracts/near/nft/src/: lib.rs
thegraph/nk/: .gitignore  package.json  schema.graphql  subgraph.yaml
web/: .firebaserc  LICENSE  config-overrides.js  package-lock.json  package.json
web/.firebase/: hosting.YnVpbGQ.cache
web/public/: index.html  manifest.json
web/src/: App.js  index.js
(+34 files in other folders)
