[package]
name = "non-fungible-token"
version = "1.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"

serde = "^1.0.100"
serde_json = "^1.0.59"
rmp-serde = "^0.15.0"
hex = "^0.4.3"
ed25519-dalek = "1.0.1"

[dev-dependencies]
more-asserts = "^0.2.2"